<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/icon_home_bnb"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_favourite"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_favourite_bnb"
        android:title="@string/title_favourite" />
    <item
        android:id="@+id/nav_box"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_box_bnb"
        android:title="@string/title_box" />
    <item
        android:id="@+id/nav_note"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_note_bnb"
        android:title="@string/title_note" />
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/icon_people_bnb"
        android:title="@string/title_profile" />
</menu>