<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:background="@color/background_app">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="114dp"
        android:layout_height="149dp"
        android:background="@drawable/gradient_list"
        android:contentDescription="@string/content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/iv_viewed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_plus"
        app:layout_constraintBottom_toBottomOf="@id/poster"
        app:layout_constraintEnd_toEndOf="@id/poster"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toTopOf="@id/poster"
        app:layout_constraintVertical_bias="0.93"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/content_description" />

    <TextView
        android:id="@+id/tv_name_group"
        style="@style/home_phones"
        android:text="@string/phones"
        android:layout_marginTop="7dp"
        android:background="@drawable/rectangle_1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/poster"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toTopOf="@id/poster"
        app:layout_constraintBottom_toBottomOf="@id/poster"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintVertical_bias="0.55"/>

    <TextView
        android:id="@+id/tv_name_product"
        style="@style/home_product"
        android:layout_height="26dp"
        android:layout_marginTop="3dp"
        android:gravity="start|top"
        android:text="@string/name_product"
        app:layout_constraintStart_toStartOf="@id/tv_name_group"
        app:layout_constraintTop_toBottomOf="@id/tv_name_group"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_price_product"
        style="@style/home_product"
        android:layout_marginTop="3dp"
        android:gravity="start|top"
        android:text="@string/price_product"
        app:layout_constraintStart_toStartOf="@id/tv_name_group"
        app:layout_constraintTop_toBottomOf="@id/tv_name_product"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>