<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Phones -->
    <ImageView
        android:id="@+id/icon_phones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/icon_phones"/>

    <TextView
        android:id="@+id/tv_phones"
        style="@style/home_text_icon"
        android:text="@string/phones"
        app:layout_constraintEnd_toEndOf="@id/icon_phones"
        app:layout_constraintStart_toStartOf="@id/icon_phones"
        app:layout_constraintTop_toBottomOf="@id/icon_phones"
        tools:ignore="TextContrastCheck" />

    <!-- Headphones -->
    <ImageView
        android:id="@+id/icon_headphones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/icon_games"
        app:layout_constraintTop_toTopOf="@id/icon_phones"
        app:layout_constraintStart_toEndOf="@id/icon_phones"
        android:src="@drawable/icon_headphones"/>

    <TextView
        android:id="@+id/tv_headphones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/headphones"
        android:textAppearance="@style/home_text_icon"
        app:layout_constraintEnd_toEndOf="@id/icon_headphones"
        app:layout_constraintStart_toStartOf="@id/icon_headphones"
        app:layout_constraintTop_toBottomOf="@id/icon_headphones"
        tools:ignore="TextContrastCheck" />

    <!-- icon_games -->
    <ImageView
        android:id="@+id/icon_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/icon_cars"
        app:layout_constraintTop_toTopOf="@id/icon_headphones"
        app:layout_constraintStart_toEndOf="@id/icon_headphones"
        android:src="@drawable/icon_games"/>

    <TextView
        android:id="@+id/tv_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/games"
        android:textAppearance="@style/home_text_icon"
        app:layout_constraintEnd_toEndOf="@id/icon_games"
        app:layout_constraintStart_toStartOf="@id/icon_games"
        app:layout_constraintTop_toBottomOf="@id/icon_games"
        tools:ignore="TextContrastCheck" />

    <!-- icon_cars -->
    <ImageView
        android:id="@+id/icon_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/icon_furniture"
        app:layout_constraintTop_toTopOf="@id/icon_games"
        app:layout_constraintStart_toEndOf="@id/icon_games"
        android:src="@drawable/icon_cars"/>

    <TextView
        android:id="@+id/tv_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/cars"
        android:textAppearance="@style/home_text_icon"
        app:layout_constraintEnd_toEndOf="@id/icon_cars"
        app:layout_constraintStart_toStartOf="@id/icon_cars"
        app:layout_constraintTop_toBottomOf="@id/icon_cars"
        tools:ignore="TextContrastCheck" />

    <!-- icon_furniture -->
    <ImageView
        android:id="@+id/icon_furniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/icon_kids"
        app:layout_constraintTop_toTopOf="@id/icon_cars"
        app:layout_constraintStart_toEndOf="@id/icon_cars"
        android:src="@drawable/icon_furniture"/>

    <TextView
        android:id="@+id/tv_furniture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/furniture"
        android:textAppearance="@style/home_text_icon"
        app:layout_constraintEnd_toEndOf="@id/icon_furniture"
        app:layout_constraintStart_toStartOf="@id/icon_furniture"
        app:layout_constraintTop_toBottomOf="@id/icon_furniture"
        tools:ignore="TextContrastCheck" />

    <!-- icon_kids -->
    <ImageView
        android:id="@+id/icon_kids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/icon_furniture"
        app:layout_constraintStart_toEndOf="@id/icon_furniture"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/icon_kids"/>

    <TextView
        android:id="@+id/tv_kids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/kids"
        android:textAppearance="@style/home_text_icon"
        app:layout_constraintEnd_toEndOf="@id/icon_kids"
        app:layout_constraintStart_toStartOf="@id/icon_kids"
        app:layout_constraintTop_toBottomOf="@id/icon_kids"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>