<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    android:fillViewport="true"
    android:layout_marginTop="?attr/actionBarSize"
    tools:viewBindingType="androidx.core.widget.NestedScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo"
            android:layout_width="61dp"
            android:layout_height="61dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/change_photo"
            android:textAppearance="@style/change_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_photo" />

        <TextView
            android:id="@+id/satria_adhi"
            style="@style/satria_adhi"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal|top"
            android:text="@string/satria_adhi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_photo" />

        <ImageView
            android:id="@+id/bt_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/satria_adhi" />

        <TextView
            android:id="@+id/tv_upload"
            style="@style/text_button"
            android:text="@string/upload_item"
            app:layout_constraintBottom_toBottomOf="@id/bt_upload"
            app:layout_constraintEnd_toEndOf="@id/bt_upload"
            app:layout_constraintStart_toStartOf="@id/bt_upload"
            app:layout_constraintTop_toTopOf="@id/bt_upload" />

        <include
            android:id="@+id/include_trade_store"
            layout="@layout/include_trade_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@id/bt_upload" />

        <include
            android:id="@+id/include_payment_method"
            layout="@layout/include_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/include_trade_store" />

        <include
            android:id="@+id/include_balance"
            layout="@layout/include_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/include_payment_method" />

        <include
            android:id="@+id/include_trade_history"
            layout="@layout/include_trade_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/include_balance" />

        <include
            android:id="@+id/include_restore_purchase"
            layout="@layout/include_restore_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/include_trade_history" />

        <include
            android:id="@+id/include_help"
            layout="@layout/include_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/include_restore_purchase" />

        <include
            android:id="@+id/include_logout"
            layout="@layout/include_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/include_help" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>